# o365-cli

./: .gitignore  LICENSE  README.md  TODO.md  config.example  pyproject.toml  pytest.ini
_work/planning/: 00-index.md  01-architecture.md  02-consistent-options.md  03-output-formats.md  04-migration-plan.md  05-before-after.md  06-models-and-types.md  render.sh
docs/: MCP_ARCHITECTURE.md  MCP_IMPLEMENTATION_CHECKLIST.md  MCP_IMPLEMENTATION_PLAN.md  MCP_TESTING_STRATEGY.md  MCP_TOOLS_REFERENCE.md  MCP_USER_GUIDE.md  README.md
o365/: __init__.py  __main__.py  auth.py  calendar.py  chat.py  common.py  config_cmd.py  contacts.py  files.py  mail.py  mcp_server.py  recordings.py
tests/: README.md  conftest.py  test_auth.py  test_calendar.py  test_chat.py  test_config.py  test_contacts.py  test_files.py  test_mail.py  test_mcp_server.py  test_recordings.py
