[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "o365-cli"
version = "1.0.0"
description = "Unified command-line interface for managing Office365 email, calendar, and contacts"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Shaun Mitchell", email = "shaun.mitchell@trinoor.com"}
]
keywords = ["office365", "email", "calendar", "contacts", "cli", "graph-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dateutil>=2.8.0",
    "html2text>=2020.1.16",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-cov>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.scripts]
o365 = "o365.__main__:main"

[project.urls]
Homepage = "https://github.com/shitchell/o365-cli"
Repository = "https://github.com/shitchell/o365-cli"
Issues = "https://github.com/shitchell/o365-cli/issues"

[tool.setuptools]
packages = ["o365"]

[tool.setuptools.package-data]
o365 = ["py.typed"]
